--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                 <li class="item">Y</li>
                 <li class="item">Z</li>
         </ul>
-        <button href=>Empezar juego</button>
     </div>
     <div class="caja3">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
@@ -56,6 +55,12 @@
         Odit ut repudiandae, aperiam exercitationem sequi a modi
         temporibus quidem rem quas facere vero aut fugiat quaerat, 
         magni dolores impedit, illum dolore.
+        
+        <form>
+            <button href=>enviar</button>
+            <button href=>Pasapalabra</button>
+            <input type="text" id="respuestaUsu" name"Escribe tu respuesta"
+        </form>
     </div>
 </div>
 </body>
